--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ numpy = "^1.24.3"
 pandas = "^2.0.2"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.23.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
