--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ seaborn = "^0.12.2"
 scienceplots = "^2.1.0"
 numpy = "^1.24.3"
 pandas = "^2.0.2"
+pytorch-lightning = "^2.0.3"
 
 
 [build-system]
