--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ numpy = "^1.24.3"
 pandas = "^2.0.2"
 pytorch-lightning = "^2.0.3"
 timm = "^0.9.2"
+black = "^23.3.0"
+opencv-python = "^4.7.0.72"
+notebook = "^6.5.4"
 
 
 [build-system]
