--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ notebook = "^6.5.4"
 torchvision = "^0.15.2"
 torchaudio = "^2.0.2"
 ipykernel = "^6.23.2"
+ipywidgets = "^8.0.6"
+kaggle = "^1.5.15"
 
 
 [build-system]
