--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ scienceplots = "^2.1.0"
 numpy = "^1.24.3"
 pandas = "^2.0.2"
 ipykernel = "^6.23.2"
+torchvision = "^0.15.2"
 
 [build-system]
 requires = ["poetry-core"]
