--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ scienceplots = "^2.1.0"
 numpy = "^1.24.3"
 pandas = "^2.0.2"
 pytorch-lightning = "^2.0.3"
+dpt = {git = "git@github.com:isl-org/DPT.git"}
 
 
 [build-system]
