--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 *.png
 poetry.lock
-/hubmap/data
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -161,5 +160,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
-
-# Data except for the init and gitkeep file
+hubmap/data/test/**/*
+hubmap/data/train/**/*
+hubmap/data/hubmap-hacking-the-human-vasculature.zip
+hubmap/data/polygons.jsonl
+hubmap/data/sample_submission.csv
+hubmap/data/tile_meta.csv
+hubmap/data/wsi_meta.csv
