added dpt model and experiment pipeline template

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,4 @@ hubmap/data/polygons.jsonl
 hubmap/data/sample_submission.csv
 hubmap/data/tile_meta.csv
 hubmap/data/wsi_meta.csv
+hubmap/experiments/checkpoints/**/*
