--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ tqdm = "^4.65.0"
 ipywidgets = "^8.1.0"
 ipykernel = "^6.25.0"
 ipython = "^8.14.0"
+pytorch-lightning = "^2.0.6"
+lightning = "^2.0.6"
 
 [build-system]
 requires = ["poetry-core"]
