--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ ipython = "^8.14.0"
 pytorch-lightning = "^2.0.6"
 lightning = "^2.0.6"
 scikit-image = "^0.21.0"
+scikit-learn = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
