--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytorch-lightning = "^2.0.6"
 lightning = "^2.0.6"
 scikit-image = "^0.21.0"
 scikit-learn = "^1.3.0"
+transformers = "^4.31.0"
 
 [build-system]
 requires = ["poetry-core"]
