--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ checkpoints/*/**
 figures/*
 figures/*/**
 !figures/visualization.ipynb
+!figures/introduction_example_visualization.py
 
 # Custom for @jonas
 metric.ipynb
